--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
+    "@nozbe/watermelondb": "^0.23.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -21,7 +22,8 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
-    "lottie-react-native": "4.0.2",
+    "lottie-ios": "3.1.9",
+    "lottie-react-native": "3.5.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
@@ -40,11 +42,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
+    "add": "^2.0.6",
     "react-native-svg-transformer": "^0.14.3",
-    "typescript": "~4.0.0"
+    "typescript": "~4.0.0",
+    "yarn": "^1.22.11"
   },
   "private": true
 }
