adds simdjson, fixes lottie versions & linked libs

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -12,6 +12,9 @@ target 'rentx' do
 
   pod 'React-jsi', :path => '../node_modules/react-native/ReactCommon/jsi', :modular_headers => true
 
+  # NOTE: This is required as of v0.23
+  pod 'simdjson', path: '../node_modules/@nozbe/simdjson'
+
   # Uncomment to opt-in to using Flipper
   #
   # if !ENV['CI']
