--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
-    "lottie-ios": "3.1.9",
-    "lottie-react-native": "3.5.0",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^4.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
