--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/archivo": "^0.2.0",
     "@expo-google-fonts/inter": "^0.2.0",
     "@nozbe/watermelondb": "^0.23.0",
+    "@react-native-community/netinfo": "6.0.0",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
